--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ cmake_install.cmake
 Makefile
 sandbox/arduino/dynamixel2arduino/bluetooth-throughput/analyzer/consoletable_ext-prefix/**
 sandbox/arduino/dynamixel2arduino/bluetooth-throughput/analyzer/bt210-throughput
+ros1_ws/build/**
+ros1_ws/devel/**
